Resolved issue where content displays on firefox but not chrome based browser

--- a/apps/web/src/Pages/Overview/Overview.scss
+++ b/apps/web/src/Pages/Overview/Overview.scss
@@ -86,7 +86,7 @@
           }
           @media (min-width: $sm) {
             grid-template-columns: subgrid;
-            place-items: baseline;
+            align-items: baseline;
           }
         }
         @media (min-width: $sm) {
